reports/3_Causal_Effect_Learning/Scenario 1/Mediation Analysis.err.log
Traceback (most recent call last):
  File "/Users/alinaxu/opt/anaconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/alinaxu/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/alinaxu/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/alinaxu/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/alinaxu/opt/anaconda3/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/Users/alinaxu/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/alinaxu/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/alinaxu/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
state = np.array(MovieLens_CEL.iloc[,userinfo_index])
action = np.array(MovieLens_CEL['Drama'])
mediator = np.array(single_data[['SOFA']])
reward = np.array(single_data['rating'])
MovieLens_CEL_MD = {'state':state,'action':action,'mediator':mediator,'reward':reward}
------------------

[0;36m  File [0;32m"/var/folders/9j/vb5nb4rd5bx0gr1q5ytx9q600000gn/T/ipykernel_91590/3397862122.py"[0;36m, line [0;32m1[0m
[0;31m    state = np.array(MovieLens_CEL.iloc[,userinfo_index])[0m
[0m                                        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3397862122.py, line 1)

